# gl-graph-plotter

./: CMakeLists.txt  ImguiStyle.h  Loader.cpp  Loader.h  README.md  RenderObject.cpp  RenderObject.h  glad.c  imgui.ini  main.cpp
inc/glad/: glad.h
shaders/: grid.f.glsl  grid.v.glsl
